# TIN

./: CMakeCache.txt  CMakeLists.txt  DETECTOR  MANAGER  Makefile  README.md  build.sh  client  cmake_install.cmake  server  server.c
ERuraTests/: Test_1.sh  Test_2.sh  Test_3.sh  Test_DETECTOR_1.sh  Test_DETECTOR_2.sh  Test_DETECTOR_3.sh  Test_MANAGER.sh
business logic/: Statistics.cpp  Statistics.h
businessLogic/: Statistics.cpp  Statistics.h
common/: Constants.h  message.h  messageType.cpp  messageType.h
detector/: client.c  server.c  server.cpp
docs/: Dokumentacja_Wstępna.docx
http_module/: HttpHandler.cpp  HttpHandler.h
logger/: ERuraLogType.h  LoggerERura.cpp  LoggerERura.h
manager/: DetectorHistory.cpp  DetectorHistory.h  HistoryRecord.cpp  HistoryRecord.h  MessageHandler.cpp  MessageHandler.h  client.c  client.cc  server.c
manager/cli/: CommandLineInterface.cpp  CommandLineInterface.h
plugin_wireshark/: tin_proto.lua
tests/: BusinnesLogicTests.cpp  LoggerERuraTest.cpp
